--- a/itis3135/natureinshutterspeed/east_gallery.html
+++ b/itis3135/natureinshutterspeed/east_gallery.html
@@ -15,32 +15,79 @@
   <main>
     <h2 class="intro">Gallery: Eastern United States</h2>
     <section class="gallery-grid">
-      <a href="images/eastern/beach.jpg" data-lightbox="east-gallery"><img src="images/east/beach.jpg" alt="Beach" loading="lazy" /></a>
-      <a href="images/eastern/beach2.jpg" data-lightbox="east-gallery"><img src="images/east/beach2.jpg" alt="Beach 2" loading="lazy" /></a>
-      <a href="images/eastern/bridges.jpg" data-lightbox="east-gallery"><img src="images/east/bridges.jpg" alt="Bridges" loading="lazy" /></a>
-      <a href="images/eastern/creek.jpg" data-lightbox="east-gallery"><img src="images/east/creek.jpg" alt="Creek" loading="lazy" /></a>
-      <a href="images/eastern/discatlake.jpg" data-lightbox="east-gallery"><img src="images/east/discatlake.jpg" alt="Disc Golf Lake" loading="lazy" /></a>
-      <a href="images/eastern/helmet.jpg" data-lightbox="east-gallery"><img src="images/east/helmet.jpg" alt="Helmet" loading="lazy" /></a>
-      <a href="images/eastern/lighthous.jpg" data-lightbox="east-gallery"><img src="images/east/lighthous.jpg" alt="Lighthouse" loading="lazy" /></a>
-      <a href="images/eastern/me1.jpg" data-lightbox="east-gallery"><img src="images/east/me1.jpg" alt="Me 1" loading="lazy" /></a>
-      <a href="images/eastern/me2.jpg" data-lightbox="east-gallery"><img src="images/east/me2.jpg" alt="Me 2" loading="lazy" /></a>
-      <a href="images/eastern/me3.jpg" data-lightbox="east-gallery"><img src="images/east/me3.jpg" alt="Me 3" loading="lazy" /></a>
-      <a href="images/eastern/me6.jpg" data-lightbox="east-gallery"><img src="images/east/me6.jpg" alt="Me 6" loading="lazy" /></a>
-      <a href="images/eastern/merica.jpg" data-lightbox="east-gallery"><img src="images/east/merica.jpg" alt="America" loading="lazy" /></a>
-      <a href="images/eastern/ne1.jpg" data-lightbox="east-gallery"><img src="images/east/ne1.jpg" alt="New England 1" loading="lazy" /></a>
-      <a href="images/eastern/ne2.jpg" data-lightbox="east-gallery"><img src="images/east/ne2.jpg" alt="New England 2" loading="lazy" /></a>
-      <a href="images/eastern/newOr1.jpg" data-lightbox="east-gallery"><img src="images/east/newOr1.jpg" alt="New Orleans 1" loading="lazy" /></a>
-      <a href="images/eastern/newOr2.jpg" data-lightbox="east-gallery"><img src="images/east/newOr2.jpg" alt="New Orleans 2" loading="lazy" /></a>
-      <a href="images/eastern/newOr3.jpg" data-lightbox="east-gallery"><img src="images/east/newOr3.jpg" alt="New Orleans 3" loading="lazy" /></a>
-      <a href="images/eastern/newOr4.jpg" data-lightbox="east-gallery"><img src="images/east/newOr4.jpg" alt="New Orleans 4" loading="lazy" /></a>
-      <a href="images/eastern/ny1.jpg" data-lightbox="east-gallery"><img src="images/east/ny1.jpg" alt="New York 1" loading="lazy" /></a>
-      <a href="images/eastern/ny2.jpg" data-lightbox="east-gallery"><img src="images/east/ny2.jpg" alt="New York 2" loading="lazy" /></a>
-      <a href="images/eastern/paintedrocks.jpg" data-lightbox="east-gallery"><img src="images/east/paintedrocks.jpg" alt="Painted Rocks" loading="lazy" /></a>
-      <a href="images/eastern/panthers.jpg" data-lightbox="east-gallery"><img src="images/east/panthers.jpg" alt="Panthers" loading="lazy" /></a>
-      <a href="images/eastern/stlouisarch.jpg" data-lightbox="east-gallery"><img src="images/east/stlouisarch.jpg" alt="St. Louis Arch" loading="lazy" /></a>
-      <a href="images/eastern/stlouisarch2.jpg" data-lightbox="east-gallery"><img src="images/east/stlouisarch2.jpg" alt="St. Louis Arch Night" loading="lazy" /></a>
-    </section>
-
+      <a href="images/eastern/beach.jpg" data-lightbox="east-gallery">
+        <img src="images/east/beach.jpg" alt="Sunset over NC sound" loading="lazy" />
+      </a>
+      <a href="images/eastern/beach2.jpg" data-lightbox="east-gallery">
+        <img src="images/east/beach2.jpg" alt="Strip of Outer Banks" loading="lazy" />
+      </a>
+      <a href="images/eastern/bridges.jpg" data-lightbox="east-gallery">
+        <img src="images/east/bridges.jpg" alt="Bridges in the Eastern U.S." loading="lazy" />
+      </a>
+      <a href="images/eastern/creek.jpg" data-lightbox="east-gallery">
+        <img src="images/east/creek.jpg" alt="Eastern U.S. forest creek" loading="lazy" />
+      </a>
+      <a href="images/eastern/discatlake.jpg" data-lightbox="east-gallery">
+        <img src="images/east/discatlake.jpg" alt="Disc golf course near lake Eerie" loading="lazy" />
+      </a>
+      <a href="images/eastern/helmet.jpg" data-lightbox="east-gallery">
+        <img src="images/east/helmet.jpg" alt="College Football Hall of Fame" loading="lazy" />
+      </a>
+      <a href="images/eastern/lighthous.jpg" data-lightbox="east-gallery">
+        <img src="images/east/lighthous.jpg" alt="Lighthouse in the Eastern U.S." loading="lazy" />
+      </a>
+      <a href="images/eastern/me1.jpg" data-lightbox="east-gallery">
+        <img src="images/east/me1.jpg" alt="Hiking the North Carolina Mountains" loading="lazy" />
+      </a>
+      <a href="images/eastern/me2.jpg" data-lightbox="east-gallery">
+        <img src="images/east/me2.jpg" alt="Snowboarding in New Hampshire" loading="lazy" />
+      </a>
+      <a href="images/eastern/me3.jpg" data-lightbox="east-gallery">
+        <img src="images/east/me3.jpg" alt="My son in New Hampshire" loading="lazy" />
+      </a>
+      <a href="images/eastern/me6.jpg" data-lightbox="east-gallery">
+        <img src="images/east/me6.jpg" alt="horse in NC" loading="lazy" />
+      </a>
+      <a href="images/eastern/merica.jpg" data-lightbox="east-gallery">
+        <img src="images/east/merica.jpg" alt="Tubing in Tennessee" loading="lazy" />
+      </a>
+      <a href="images/eastern/ne1.jpg" data-lightbox="east-gallery">
+        <img src="images/east/ne1.jpg" alt="House on an island in Maine" loading="lazy" />
+      </a>
+      <a href="images/eastern/ne2.jpg" data-lightbox="east-gallery">
+        <img src="images/east/ne2.jpg" alt="Landscape view of New Hampshire" loading="lazy" />
+      </a>
+      <a href="images/eastern/newOr1.jpg" data-lightbox="east-gallery">
+        <img src="images/east/newOr1.jpg" alt="New Orleans street view" loading="lazy" />
+      </a>
+      <a href="images/eastern/newOr2.jpg" data-lightbox="east-gallery">
+        <img src="images/east/newOr2.jpg" alt="Alley of New Orleans" loading="lazy" />
+      </a>
+      <a href="images/eastern/newOr3.jpg" data-lightbox="east-gallery">
+        <img src="images/east/newOr3.jpg" alt="Architecture in New Orleans" loading="lazy" />
+      </a>
+      <a href="images/eastern/newOr4.jpg" data-lightbox="east-gallery">
+        <img src="images/east/newOr4.jpg" alt="New Orleans building and street" loading="lazy" />
+      </a>
+      <a href="images/eastern/ny1.jpg" data-lightbox="east-gallery">
+        <img src="images/east/ny1.jpg" alt="My son and I in front of the Rockefeller building" loading="lazy" />
+      </a>
+      <a href="images/eastern/ny2.jpg" data-lightbox="east-gallery">
+        <img src="images/east/ny2.jpg" alt="View of downtown New York" loading="lazy" />
+      </a>
+      <a href="images/eastern/paintedrocks.jpg" data-lightbox="east-gallery">
+        <img src="images/east/paintedrocks.jpg" alt="Painted rocks in Michigan" loading="lazy" />
+      </a>
+      <a href="images/eastern/panthers.jpg" data-lightbox="east-gallery">
+        <img src="images/east/panthers.jpg" alt="Carolina Panthers stadium" loading="lazy" />
+      </a>
+      <a href="images/eastern/stlouisarch.jpg" data-lightbox="east-gallery">
+        <img src="images/east/stlouisarch.jpg" alt="St. Louis Arch at night" loading="lazy" />
+      </a>
+      <a href="images/eastern/stlouisarch2.jpg" data-lightbox="east-gallery">
+        <img src="images/east/stlouisarch2.jpg" alt="St. Louis Arch through the lens" loading="lazy" />
+      </a>
+    </section>    
   </main>
   <footer>
     <div data-include="components/footer.html"></div>
