--- a/itis3135/natureinshutterspeed/west_gallery.html
+++ b/itis3135/natureinshutterspeed/west_gallery.html
@@ -15,68 +15,68 @@
   <main>
     <h2 class="intro">Gallery: Western United States</h2>
     <section class="gallery-grid">
-      <a href="images/western/ariz1.JPG" data-lightbox="west-gallery"><img src="images/west/ariz1.jpg" alt="ariz1" loading="lazy" /></a>
-      <a href="images/western/ariz4.JPG" data-lightbox="west-gallery"><img src="images/west/ariz4.jpg" alt="ariz4" loading="lazy" /></a>
-      <a href="images/western/ariz5.JPG" data-lightbox="west-gallery"><img src="images/west/ariz5.jpg" alt="ariz5" loading="lazy" /></a>
-      <a href="images/western/ariz6.jpg" data-lightbox="west-gallery"><img src="images/west/ariz6.jpg" alt="ariz6" loading="lazy" /></a>
-      <a href="images/western/arizss.JPG" data-lightbox="west-gallery"><img src="images/west/arizss.jpg" alt="arizss" loading="lazy" /></a>
-      <a href="images/western/badnland1.JPG" data-lightbox="west-gallery"><img src="images/west/badnland1.jpg" alt="badland1" loading="lazy" /></a>
-      <a href="images/western/badland2.JPG" data-lightbox="west-gallery"><img src="images/west/badland2.jpg" alt="badland2" loading="lazy" /></a>
-      <a href="images/western/badland3.JPG" data-lightbox="west-gallery"><img src="images/west/badland3.jpg" alt="badland3" loading="lazy" /></a>
-      <a href="images/western/badland4.JPG" data-lightbox="west-gallery"><img src="images/west/badland4.jpg" alt="badland4" loading="lazy" /></a>
-      <a href="images/western/badland5.jpg" data-lightbox="west-gallery"><img src="images/west/badland5.jpg" alt="badland5" loading="lazy" /></a>
-      <a href="images/western/cooltrees.JPG" data-lightbox="west-gallery"><img src="images/west/cooltrees.jpg" alt="cooltrees" loading="lazy" /></a>
-      <a href="images/western/field.jpg" data-lightbox="west-gallery"><img src="images/west/field.jpg" alt="field" loading="lazy" /></a>
-      <a href="images/western/glacier2.JPG" data-lightbox="west-gallery"><img src="images/west/glacier2.jpg" alt="glacier2" loading="lazy" /></a>
-      <a href="images/western/glacier3.JPG" data-lightbox="west-gallery"><img src="images/west/glacier3.jpg" alt="glacier3" loading="lazy" /></a>
-      <a href="images/western/glacier4.JPG" data-lightbox="west-gallery"><img src="images/west/glacier4.jpg" alt="glacier4" loading="lazy" /></a>
-      <a href="images/western/glacier5.JPG" data-lightbox="west-gallery"><img src="images/west/glacier5.jpg" alt="glacier5" loading="lazy" /></a>
+      <a href="images/western/ariz1.JPG" data-lightbox="west-gallery"><img src="images/west/ariz1.jpg" alt="Welcome to Arizona" loading="lazy" /></a>
+      <a href="images/western/ariz4.JPG" data-lightbox="west-gallery"><img src="images/west/ariz4.jpg" alt="Sunrising on the mountains of Arizona" loading="lazy" /></a>
+      <a href="images/western/ariz5.JPG" data-lightbox="west-gallery"><img src="images/west/ariz5.jpg" alt="Desert view in Arizona" loading="lazy" /></a>
+      <a href="images/western/ariz6.jpg" data-lightbox="west-gallery"><img src="images/west/ariz6.jpg" alt="Hot-air ballooning in Arizona" loading="lazy" /></a>
+      <a href="images/western/arizss.JPG" data-lightbox="west-gallery"><img src="images/west/arizss.jpg" alt="Arizona sunset" loading="lazy" /></a>
+      <a href="images/western/badnland1.JPG" data-lightbox="west-gallery"><img src="images/west/badnland1.jpg" alt="Me entering the Badlands" loading="lazy" /></a>
+      <a href="images/western/badland2.JPG" data-lightbox="west-gallery"><img src="images/west/badland2.jpg" alt="Me in the Badlands" loading="lazy" /></a>
+      <a href="images/western/badland3.JPG" data-lightbox="west-gallery"><img src="images/west/badland3.jpg" alt="The wash in the Badlands" loading="lazy" /></a>
+      <a href="images/western/badland4.JPG" data-lightbox="west-gallery"><img src="images/west/badland4.jpg" alt="Peaks in the Badlands" loading="lazy" /></a>
+      <a href="images/western/badland5.jpg" data-lightbox="west-gallery"><img src="images/west/badland5.jpg" alt="Badlands corrosion" loading="lazy" /></a>
+      <a href="images/western/cooltrees.JPG" data-lightbox="west-gallery"><img src="images/west/cooltrees.jpg" alt="Cool trees with spanish moss" loading="lazy" /></a>
+      <a href="images/western/field.jpg" data-lightbox="west-gallery"><img src="images/west/field.jpg" alt="Field with pretty flowers" loading="lazy" /></a>
+      <a href="images/western/glacier2.JPG" data-lightbox="west-gallery"><img src="images/west/glacier2.jpg" alt="Waterfalls in Glacier National Park" loading="lazy" /></a>
+      <a href="images/western/glacier3.JPG" data-lightbox="west-gallery"><img src="images/west/glacier3.jpg" alt="Cool shot of Glacier National Park" loading="lazy" /></a>
+      <a href="images/western/glacier4.JPG" data-lightbox="west-gallery"><img src="images/west/glacier4.jpg" alt="Mountain goats in Glacier National Park" loading="lazy" /></a>
+      <a href="images/western/glacier5.JPG" data-lightbox="west-gallery"><img src="images/west/glacier5.jpg" alt="Foggy Glacier National Park" loading="lazy" /></a>
       <a href="images/western/glamping.jpg" data-lightbox="west-gallery"><img src="images/west/glamping.jpg" alt="glamping" loading="lazy" /></a>
-      <a href="images/western/grandcan1.JPG" data-lightbox="west-gallery"><img src="images/west/grandcan1.jpg" alt="grandcan1" loading="lazy" /></a>
-      <a href="images/western/grandcan2.JPG" data-lightbox="west-gallery"><img src="images/west/grandcan2.jpg" alt="grandcan2" loading="lazy" /></a>
-      <a href="images/western/grandcan4.JPG" data-lightbox="west-gallery"><img src="images/west/grandcan4.jpg" alt="grandcan4" loading="lazy" /></a>
-      <a href="images/western/horshoebend.JPG" data-lightbox="west-gallery"><img src="images/west/horshoebend.jpg" alt="horshoebend" loading="lazy" /></a>
-      <a href="images/western/longroad.JPG" data-lightbox="west-gallery"><img src="images/west/longroad.jpg" alt="longroad" loading="lazy" /></a>
-      <a href="images/western/me4.JPG" data-lightbox="west-gallery"><img src="images/west/me4.jpg" alt="me4" loading="lazy" /></a>
-      <a href="images/western/me5.JPG" data-lightbox="west-gallery"><img src="images/west/me5.jpg" alt="me5" loading="lazy" /></a>
-      <a href="images/western/mg2.JPG" data-lightbox="west-gallery"><img src="images/west/mg2.jpg" alt="mg2" loading="lazy" /></a>
-      <a href="images/western/mg3.JPG" data-lightbox="west-gallery"><img src="images/west/mg3.jpg" alt="mg3" loading="lazy" /></a>
-      <a href="images/western/monument.JPG" data-lightbox="west-gallery"><img src="images/west/monument.jpg" alt="monument" loading="lazy" /></a>
-      <a href="images/western/national.JPG" data-lightbox="west-gallery"><img src="images/west/national.jpg" alt="national" loading="lazy" /></a>
-      <a href="images/western/pacific1.JPG" data-lightbox="west-gallery"><img src="images/west/pacific1.jpg" alt="pacific1" loading="lazy" /></a>
-      <a href="images/western/pacific2.JPG" data-lightbox="west-gallery"><img src="images/west/pacific2.jpg" alt="pacific2" loading="lazy" /></a>
-      <a href="images/western/pacific3.JPG" data-lightbox="west-gallery"><img src="images/west/pacific3.jpg" alt="pacific3" loading="lazy" /></a>
-      <a href="images/western/pacific5.JPG" data-lightbox="west-gallery"><img src="images/west/pacific5.jpg" alt="pacific5" loading="lazy" /></a>
-      <a href="images/western/pacific6.JPG" data-lightbox="west-gallery"><img src="images/west/pacific6.jpg" alt="pacific6" loading="lazy" /></a>
-      <a href="images/western/pacific7.JPG" data-lightbox="west-gallery"><img src="images/west/pacific7.jpg" alt="pacific7" loading="lazy" /></a>
-      <a href="images/western/rainbow.jpg" data-lightbox="west-gallery"><img src="images/west/rainbow.jpg" alt="rainbow" loading="lazy" /></a>
-      <a href="images/western/redwood1.jpg" data-lightbox="west-gallery"><img src="images/west/redwood1.jpg" alt="redwood1" loading="lazy" /></a>
-      <a href="images/western/redwood2.jpg" data-lightbox="west-gallery"><img src="images/west/redwood2.jpg" alt="redwood2" loading="lazy" /></a>
-      <a href="images/western/river.JPG" data-lightbox="west-gallery"><img src="images/west/river.jpg" alt="river" loading="lazy" /></a>
+      <a href="images/western/grandcan1.JPG" data-lightbox="west-gallery"><img src="images/west/grandcan1.jpg" alt="Early spring in Grand Canyon" loading="lazy" /></a>
+      <a href="images/western/grandcan2.JPG" data-lightbox="west-gallery"><img src="images/west/grandcan2.jpg" alt="Colorful part of Grand Canyon" loading="lazy" /></a>
+      <a href="images/western/grandcan4.JPG" data-lightbox="west-gallery"><img src="images/west/grandcan4.jpg" alt="Grand Canyon" loading="lazy" /></a>
+      <a href="images/western/horshoebend.JPG" data-lightbox="west-gallery"><img src="images/west/horshoebend.jpg" alt="Horshoebend bend National Park" loading="lazy" /></a>
+      <a href="images/western/longroad.JPG" data-lightbox="west-gallery"><img src="images/west/longroad.jpg" alt="longroad ahead of us" loading="lazy" /></a>
+      <a href="images/western/me4.JPG" data-lightbox="west-gallery"><img src="images/west/me4.jpg" alt="My son skipping rocks in the Pacific Ocean" loading="lazy" /></a>
+      <a href="images/western/me5.JPG" data-lightbox="west-gallery"><img src="images/west/me5.jpg" alt="My son and I drinking from the Mississippi" loading="lazy" /></a>
+      <a href="images/western/mg2.JPG" data-lightbox="west-gallery"><img src="images/west/mg2.jpg" alt="My mom showing you how its done!" loading="lazy" /></a>
+      <a href="images/western/mg3.JPG" data-lightbox="west-gallery"><img src="images/west/mg3.jpg" alt="My son and my mother entering Arizona" loading="lazy" /></a>
+      <a href="images/western/monument.JPG" data-lightbox="west-gallery"><img src="images/west/monument.jpg" alt="Monument valley" loading="lazy" /></a>
+      <a href="images/western/national.JPG" data-lightbox="west-gallery"><img src="images/west/national.jpg" alt="National monument" loading="lazy" /></a>
+      <a href="images/western/pacific1.JPG" data-lightbox="west-gallery"><img src="images/west/pacific1.jpg" alt="Cool log shot" loading="lazy" /></a>
+      <a href="images/western/pacific2.JPG" data-lightbox="west-gallery"><img src="images/west/pacific2.jpg" alt="Artistic tree shot on the PCH" loading="lazy" /></a>
+      <a href="images/western/pacific3.JPG" data-lightbox="west-gallery"><img src="images/west/pacific3.jpg" alt="300 feet above the ocean on a mountain" loading="lazy" /></a>
+      <a href="images/western/pacific5.JPG" data-lightbox="west-gallery"><img src="images/west/pacific5.jpg" alt="Pacific coast during the day" loading="lazy" /></a>
+      <a href="images/western/pacific6.JPG" data-lightbox="west-gallery"><img src="images/west/pacific6.jpg" alt="Crazy rocks on the West coast" loading="lazy" /></a>
+      <a href="images/western/pacific7.JPG" data-lightbox="west-gallery"><img src="images/west/pacific7.jpg" alt="Sunset on the pacific" loading="lazy" /></a>
+      <a href="images/western/rainbow.jpg" data-lightbox="west-gallery"><img src="images/west/rainbow.jpg" alt="rainbow over the RV" loading="lazy" /></a>
+      <a href="images/western/redwood1.jpg" data-lightbox="west-gallery"><img src="images/west/redwood1.jpg" alt="Redwood spire shot" loading="lazy" /></a>
+      <a href="images/western/redwood2.jpg" data-lightbox="west-gallery"><img src="images/west/redwood2.jpg" alt="redwoods" loading="lazy" /></a>
+      <a href="images/western/river.JPG" data-lightbox="west-gallery"><img src="images/west/river.jpg" alt="Colorado river" loading="lazy" /></a>
       <a href="images/western/suguaro.JPG" data-lightbox="west-gallery"><img src="images/west/suguaro.jpg" alt="suguaro" loading="lazy" /></a>
-      <a href="images/western/teton1.JPG" data-lightbox="west-gallery"><img src="images/west/teton1.jpg" alt="teton1" loading="lazy" /></a>
-      <a href="images/western/teton2.JPG" data-lightbox="west-gallery"><img src="images/west/teton2.jpg" alt="teton2" loading="lazy" /></a>
-      <a href="images/western/teton3.JPG" data-lightbox="west-gallery"><img src="images/west/teton3.jpg" alt="teton3" loading="lazy" /></a>
-      <a href="images/western/teton4.JPG" data-lightbox="west-gallery"><img src="images/west/teton4.jpg" alt="teton4" loading="lazy" /></a>
-      <a href="images/western/theplanes.jpg" data-lightbox="west-gallery"><img src="images/west/theplanes.jpg" alt="theplanes" loading="lazy" /></a>
+      <a href="images/western/teton1.JPG" data-lightbox="west-gallery"><img src="images/west/teton1.jpg" alt="First face of the Grand Tetons" loading="lazy" /></a>
+      <a href="images/western/teton2.JPG" data-lightbox="west-gallery"><img src="images/west/teton2.jpg" alt="Landscape shot of the Tetons" loading="lazy" /></a>
+      <a href="images/western/teton3.JPG" data-lightbox="west-gallery"><img src="images/west/teton3.jpg" alt="Lake shot of the Tetons" loading="lazy" /></a>
+      <a href="images/western/teton4.JPG" data-lightbox="west-gallery"><img src="images/west/teton4.jpg" alt="The grand Tetons" loading="lazy" /></a>
+      <a href="images/western/theplanes.jpg" data-lightbox="west-gallery"><img src="images/west/theplanes.jpg" alt="The planes" loading="lazy" /></a>
       <a href="images/western/trex.JPG" data-lightbox="west-gallery"><img src="images/west/trex.jpg" alt="trex" loading="lazy" /></a>
-      <a href="images/western/truckinbadland.jpg" data-lightbox="west-gallery"><img src="images/west/truckinbadland.jpg" alt="truckinbadland" loading="lazy" /></a>
-      <a href="images/western/Utah.JPG" data-lightbox="west-gallery"><img src="images/west/Utah.jpg" alt="Utah" loading="lazy" /></a>
-      <a href="images/western/utah1.JPG" data-lightbox="west-gallery"><img src="images/west/utah1.jpg" alt="utah1" loading="lazy" /></a>
-      <a href="images/western/utah2.JPG" data-lightbox="west-gallery"><img src="images/west/utah2.jpg" alt="utah2" loading="lazy" /></a>
-      <a href="images/western/utah3.JPG" data-lightbox="west-gallery"><img src="images/west/utah3.jpg" alt="utah3" loading="lazy" /></a>
-      <a href="images/western/utah4.JPG" data-lightbox="west-gallery"><img src="images/west/utah4.jpg" alt="utah4" loading="lazy" /></a>
-      <a href="images/western/utah5.JPG" data-lightbox="west-gallery"><img src="images/west/utah5.jpg" alt="utah5" loading="lazy" /></a>
-      <a href="images/western/winter.JPG" data-lightbox="west-gallery"><img src="images/west/winter.jpg" alt="winter" loading="lazy" /></a>
-      <a href="images/western/yellowstone1.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone1.jpg" alt="yellowstone1" loading="lazy" /></a>
-      <a href="images/western/yellowstone2.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone2.jpg" alt="yellowstone2" loading="lazy" /></a>
-      <a href="images/western/yellowstone3.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone3.jpg" alt="yellowstone3" loading="lazy" /></a>
-      <a href="images/western/yellowstone4.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone4.jpg" alt="yellowstone4" loading="lazy" /></a>
-      <a href="images/western/yellowstone5.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone5.jpg" alt="yellowstone5" loading="lazy" /></a>
-      <a href="images/western/yellowstone6.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone6.jpg" alt="yellowstone6" loading="lazy" /></a>
-      <a href="images/western/yellowstone7.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone7.jpg" alt="yellowstone7" loading="lazy" /></a>
-      <a href="images/western/yellowstone8.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone8.jpg" alt="yellowstone8" loading="lazy" /></a>
-      <a href="images/western/yellowstone9.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone9.jpg" alt="yellowstone9" loading="lazy" /></a>
+      <a href="images/western/truckinbadland.jpg" data-lightbox="west-gallery"><img src="images/west/truckinbadland.jpg" alt="The truck in the badlands" loading="lazy" /></a>
+      <a href="images/western/Utah.JPG" data-lightbox="west-gallery"><img src="images/west/Utah.jpg" alt="Utah in a nutshell" loading="lazy" /></a>
+      <a href="images/western/utah1.JPG" data-lightbox="west-gallery"><img src="images/west/utah1.jpg" alt="Cool rock erosion" loading="lazy" /></a>
+      <a href="images/western/utah2.JPG" data-lightbox="west-gallery"><img src="images/west/utah2.jpg" alt="Deer in Utah" loading="lazy" /></a>
+      <a href="images/western/utah3.JPG" data-lightbox="west-gallery"><img src="images/west/utah3.jpg" alt="Arches National Park" loading="lazy" /></a>
+      <a href="images/western/utah4.JPG" data-lightbox="west-gallery"><img src="images/west/utah4.jpg" alt="Interesting Rock" loading="lazy" /></a>
+      <a href="images/western/utah5.JPG" data-lightbox="west-gallery"><img src="images/west/utah5.jpg" alt="Arches on arches" loading="lazy" /></a>
+      <a href="images/western/winter.JPG" data-lightbox="west-gallery"><img src="images/west/winter.jpg" alt="Winter wonderland" loading="lazy" /></a>
+      <a href="images/western/yellowstone1.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone1.jpg" alt="Bird with it's dinner in Yellowstone" loading="lazy" /></a>
+      <a href="images/western/yellowstone2.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone2.jpg" alt="Grand Prismatic Spring" loading="lazy" /></a>
+      <a href="images/western/yellowstone3.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone3.jpg" alt="Old Faithful" loading="lazy" /></a>
+      <a href="images/western/yellowstone4.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone4.jpg" alt="Interesting plants" loading="lazy" /></a>
+      <a href="images/western/yellowstone5.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone5.jpg" alt="Geyser's in Yellowstone" loading="lazy" /></a>
+      <a href="images/western/yellowstone6.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone6.jpg" alt="Shadows of clouds over Yellowstone" loading="lazy" /></a>
+      <a href="images/western/yellowstone7.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone7.jpg" alt="Animal drinking from a geyser" loading="lazy" /></a>
+      <a href="images/western/yellowstone8.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone8.jpg" alt="Bison in Yellowstone" loading="lazy" /></a>
+      <a href="images/western/yellowstone9.JPG" data-lightbox="west-gallery"><img src="images/west/yellowstone9.jpg" alt="Yellowstone falls" loading="lazy" /></a>
     </section>
     
   </main>
