--- a/itis3135/natureinshutterspeed/west_gallery.html
+++ b/itis3135/natureinshutterspeed/west_gallery.html
@@ -13,7 +13,7 @@
     <div data-include="components/header.html"></div>
   </header>
   <main>
-    <h2 class="intro">Gallery: Western United States</h2>
+    <h2>Gallery: Western United States</h2>
     <section class="gallery-grid">
       <a href="images/western/ariz1.JPG" data-lightbox="west-gallery"><img src="images/west/ariz1.jpg" alt="Welcome to Arizona" loading="lazy" /></a>
       <a href="images/western/ariz4.JPG" data-lightbox="west-gallery"><img src="images/west/ariz4.jpg" alt="Sunrising on the mountains of Arizona" loading="lazy" /></a>
