--- a/itis3135/natureinshutterspeed/east_gallery.html
+++ b/itis3135/natureinshutterspeed/east_gallery.html
@@ -13,7 +13,7 @@
     <div data-include="components/header.html"></div>
   </header>
   <main>
-    <h2 class="intro">Gallery: Eastern United States</h2>
+    <h2>Gallery: Eastern United States</h2>
     <section class="gallery-grid">
       <a href="images/eastern/beach.jpg" data-lightbox="east-gallery">
         <img src="images/east/beach.jpg" alt="Sunset over NC sound" loading="lazy" />
